Don't duplicate error fields for admins when adding mods to subreddits
Admins can forcibly add moderators to subreddits with their own tool. However; the error fields that this commit removes were duplicated (because they are already retrieved from the `<%call>` to [`userlisting.html`](https://github.com/reddit/reddit/blob/master/r2/r2/templates/userlisting.html#L79)), and when an admin encounters said error(s), it shows up twice because of this.

This stops the error from appearing twice.

Also removes the  explicit verb in admin add moderator form

There is no need for this verb, as `_("add")` is the default anyway.

--- a/r2/r2/templates/modlisting.html
+++ b/r2/r2/templates/modlisting.html
@@ -22,7 +22,6 @@
 
 <%namespace file="printablebuttons.html" import="ynbutton" />
 <%namespace file="userlisting.html" import="add_form, listing"/>
-<%namespace file="utils.html" import="error_field"/>
 
 <div class="${thing._class} usertable">
   %if thing.can_remove_self:
@@ -52,11 +51,7 @@
   %endif
 
   %if thing.addable and thing.has_add_form:
-    <%call expr="add_form(thing.form_title, thing.destination, thing.type, thing.container_name, verb=_('add'))">
-      ${error_field("ALREADY_MODERATOR", "name")}
-      ${error_field("BANNED_FROM_SUBREDDIT", "name")}
-      ${error_field("MUTED_FROM_SUBREDDIT", "name")}
-    </%call>
+    ${add_form(thing.form_title, thing.destination, thing.type, thing.container_name)}
   %endif
   ${listing()}
 </div>
