Add force add moderator permissions form
Add a permissions form for admins to use when forcibly adding mods.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -9724,6 +9724,7 @@ body.post-under-6h-old .gilded-icon {
     text-align: right;
     width: 36ex;
 }
+#moderator .permissions,
 #moderator_invite .permissions { width: 30ex; }
 .permissions > form { display: none; }
 
