--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -173,7 +173,7 @@
   %endif
   % if c.secure:
       ## Pixel to pick up HSTS policies from the base domain
-      <img id="hsts_pixel" src="//${g.domain}/static/pixel.png">
+      <img id="hsts_pixel" src="//${g.domain}/static/pixel.png" alt="" width="0" height="0">
   % endif
   %if feature.is_enabled("test_https_certs"):
     <% from r2.lib import js %>
