Persist the ban reason when making a ban permanent
Currently when making bans permanent the note is not persisted. This persists the note in the "make permanent" button however lets an API client still purge the note if they wish to. Originally reported [here](https://www.reddit.com/r/ModSupport/comments/4yk02f/when_a_ban_is_made_permanent_can_we_keep_the_ban/).

--- a/r2/r2/templates/usertableitem.html
+++ b/r2/r2/templates/usertableitem.html
@@ -100,6 +100,7 @@
     ${ynbutton(_('make permanent'), _("made permanent"), "friend",
         hidden_data = dict(type=thing.type,
                            name=thing.user.name,
-                           container=thing.container_name))}
+                           container=thing.container_name,
+                           note=getattr(thing.rel, 'note', '')))}
   %endif
 </%def>
