--- a/r2/r2/templates/printable.html
+++ b/r2/r2/templates/printable.html
@@ -166,7 +166,7 @@ ${self.RenderPrintable()}
    else:
       selflink = ""
  %>
-<div class="${self.thing_css_class(thing)} ${self.thing_css_rowclass(thing)} ${unsafe(cls)} ${selflink}"
+<div role="region" class="${self.thing_css_class(thing)} ${self.thing_css_rowclass(thing)} ${unsafe(cls)} ${selflink}"
     %if not getattr(thing, 'deleted', False) or getattr(thing, 'can_ban', False):
       id="thing_${thing._fullname}"
     %endif
