Add missing font-family fallbacks

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -2078,7 +2078,7 @@ a.star { text-decoration: none; color: #ff8b60 }
     float:left;
     margin-top: 15px;
     color: #c6c6c6;
-    font-family: arial;
+    font-family: arial, sans-serif;
     font-size: medium;
     text-align: right;
 }
@@ -2782,7 +2782,7 @@ textarea.gray { color: gray; }
 
 .login-form-side input[type=text],
 .login-form-side input[type=password] {
-    font-family: verdana; /* Override Chrome's defaults. */
+    font-family: verdana, sans-serif; /* Override Chrome's defaults. */
     font-size: 11px;
     .box-sizing(border-box);
     border: 1px solid #999;
@@ -3166,7 +3166,7 @@ label + #moresearchinfo {
 #search input[type=text] {
     border: 1px solid gray;
     font-size: 13px;
-    font-family: verdana; /* Override Chrome's defaults. */
+    font-family: verdana, sans-serif; /* Override Chrome's defaults. */
     width: 300px;
     .box-sizing(border-box);
     padding: 6px;
@@ -5939,7 +5939,7 @@ div.timeseries {
 .timeseries-placeholder {
     width: 350px;
     height: 200px;
-    font-family: verdana;
+    font-family: verdana, sans-serif;
     font-size: small;
 }
 div.timeseries span.title {
@@ -7262,7 +7262,7 @@ div #campaign-field {
     text-indent: -20px;  
     padding-left: 20px; 
     margin-bottom: 2px; 
-    font-family: courier;
+    font-family: courier, monospace;
 }
 
 .pay-form tr.input-error th {
