--- a/r2/r2/public/static/css/components/infobar.less
+++ b/r2/r2/public/static/css/components/infobar.less
@@ -62,8 +62,8 @@
 }
 
 .locked-infobar:before {
-  @1x: url('../infobar-icon-lock.png');
-  @2x: url('../infobar-icon-lock_2x.png');
+  @1x: url('./infobar-icon-lock.png');
+  @2x: url('./infobar-icon-lock_2x.png');
   @2x-bg-size: 20px 25px;
   .hdpi-bg-image(@1x: @1x, @2x: @2x, @2x-bg-size);
 }
@@ -76,8 +76,8 @@
 
   &.with-icon:before {
     background-color: @archived-infobar-color-border;
-    @1x: url('../infobar-icon-archived.png');
-    @2x: url('../infobar-icon-archived_2x.png');
+    @1x: url('./infobar-icon-archived.png');
+    @2x: url('./infobar-icon-archived_2x.png');
     @2x-bg-size: 25px 24px;
     .hdpi-bg-image(@1x: @1x, @2x: @2x, @2x-bg-size);
   }
@@ -90,8 +90,8 @@
   border-color: @timeout-infobar-color-border;
 
   &.with-icon:before {
-    @1x: url('../infobar-icon-banhammer.png');
-    @2x: url('../infobar-icon-banhammer_2x.png');
+    @1x: url('./infobar-icon-banhammer.png');
+    @2x: url('./infobar-icon-banhammer_2x.png');
     @2x-bg-size: 20px 27px;
     .hdpi-bg-image(@1x: @1x, @2x: @2x, @2x-bg-size);   
     background-color: @timeout-infobar-color-border;
