--- a/r2/r2/public/static/css/expando.less
+++ b/r2/r2/public/static/css/expando.less
@@ -6,38 +6,38 @@
     width: 20px;
 
     &.expanded {
-        background-image: url('../icon-contract.png'); /* SPRITE */
+        background-image: url('./icon-contract.png'); /* SPRITE */
     }
 
     &.expanded:hover {
-        background-image: url('../icon-contract-hover.png'); /* SPRITE */
+        background-image: url('./icon-contract-hover.png'); /* SPRITE */
     }
 
     &.collapsed {
-        background-image: url('../icon-expand.png'); /* SPRITE */
+        background-image: url('./icon-expand.png'); /* SPRITE */
     }
 
     &.collapsed:hover {
-        background-image: url('../icon-expand-hover.png'); /* SPRITE */
+        background-image: url('./icon-expand-hover.png'); /* SPRITE */
     }
 
     @media
     only screen and (min-resolution: 2dppx),
     only screen and (-webkit-min-device-pixel-ratio: 2) {
         &.expanded {
-            background-image: url(../icon-contract_2x.png); /* SPRITE pixel-ratio=2 */
+            background-image: url(./icon-contract_2x.png); /* SPRITE pixel-ratio=2 */
         }
 
         &.expanded:hover {
-            background-image: url(../icon-contract-hover_2x.png); /* SPRITE pixel-ratio=2 */
+            background-image: url(./icon-contract-hover_2x.png); /* SPRITE pixel-ratio=2 */
         }
 
         &.collapsed {
-            background-image: url(../icon-expand_2x.png); /* SPRITE pixel-ratio=2 */
+            background-image: url(./icon-expand_2x.png); /* SPRITE pixel-ratio=2 */
         }
 
         &.collapsed:hover {
-            background-image: url(../icon-expand-hover_2x.png); /* SPRITE pixel-ratio=2 */
+            background-image: url(./icon-expand-hover_2x.png); /* SPRITE pixel-ratio=2 */
         }
     }
 }
