--- a/r2/r2/public/static/css/modtools.less
+++ b/r2/r2/public/static/css/modtools.less
@@ -7,7 +7,7 @@
 
 #this_is_a_hack__please_ignore {
   // lets me put this file in the SPRITED_STYLESHEETS section of the Makefile
-  background-image: url(../reddit.com.header.png); /* SPRITE */
+  background-image: url(./reddit.com.header.png); /* SPRITE */
 }
 
 .modtools-page {
