--- a/r2/r2/public/static/css/subreddit-rules.less
+++ b/r2/r2/public/static/css/subreddit-rules.less
@@ -133,8 +133,8 @@
     position: relative;
     
     &:before {
-        .hdpi-bg-image(@1x: url(../modtools-page-icon-rules.png),
-                       @2x: url(../modtools-page-icon-rules_2x.png));
+        .hdpi-bg-image(@1x: url(./modtools-page-icon-rules.png),
+                       @2x: url(./modtools-page-icon-rules_2x.png));
 
         content: '';
         display: block;
