--- a/r2/r2/public/static/css/reddit-embed.less
+++ b/r2/r2/public/static/css/reddit-embed.less
@@ -62,7 +62,7 @@ p {
         bottom: @snoo-padding;
         width: @snoo-width;
         height: @snoo-height;
-        .hdpi-bg-image(@1x: url(../reddit-embed-logo.png); @2x: url(../reddit-embed-logo_2x.png););
+        .hdpi-bg-image(@1x: url(./reddit-embed-logo.png); @2x: url(./reddit-embed-logo_2x.png););
         text-indent: 100%;
         white-space: nowrap;
         overflow: hidden;
