Add Atom link to comments
Following RFC4685 (https://tools.ietf.org/html/rfc4685) add a "replies" link to the comment feed.

--- a/r2/r2/templates/link.xml
+++ b/r2/r2/templates/link.xml
@@ -98,6 +98,7 @@
 
     <id>${thing._fullname}</id>
     <link href="${permalink}" />
+    <link href="${permalink}.rss" rel="replies" type="application/atom+xml" />
     <updated>${html_datetime(thing._date)}</updated>
     <title>${title}</title>
 </entry>
