--- a/r2/r2/templates/link.xml
+++ b/r2/r2/templates/link.xml
@@ -99,6 +99,22 @@
     <id>${thing._fullname}</id>
     <link href="${permalink}" />
     <link href="${permalink}.rss" rel="replies" type="application/atom+xml" />
+    %if thing.different_sr:
+        <link href="${add_sr(thing.subreddit.path,
+                          sr_path=False,
+                          retain_extension=False,
+                          force_hostname=True)}"
+            rel="related"
+            type="text/html"
+            title="/r/${thing.subreddit.name}" />
+        <link href="${add_sr(thing.subreddit.path,
+                          sr_path=False,
+                          retain_extension=False,
+                          force_hostname=True)}.rss"
+            rel="related"
+            type="application/atom+xml"
+            title="/r/${thing.subreddit.name}" />
+    %endif  
     <updated>${html_datetime(thing._date)}</updated>
     <title>${title}</title>
 </entry>
