Add related link
When not a self post add a related link with the URL

--- a/r2/r2/templates/link.xml
+++ b/r2/r2/templates/link.xml
@@ -115,7 +115,10 @@
             rel="related"
             type="application/atom+xml"
             title="/r/${thing.subreddit.name}" />
-    %endif  
+    %endif
+    %if not getattr(thing, 'selftext', None):
+        <link href="${thing.url}" rel="related" />
+    %endif
     <updated>${html_datetime(thing._date)}</updated>
     <title>${title}</title>
 </entry>
