resoving issue #1799, no warning - navigate away - unsent private message

--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -36,6 +36,7 @@ ${unsafe(js.use("messagecompose"))}
 
 <%utils:submit_form onsubmit="return post_form(this, 'compose', null, null, true)",
                     method="post", _id = "compose-message",
+                    _class="warn-on-unload",
                     action="/message/compose">
 
 ${to_field()}
@@ -147,7 +148,7 @@ ${captcha_field()}
            <span class="admin-to">${thing.to}</span>
            &#32;<i>is</i>&#32; a moderator of a specific subreddit you're
            inquiring about, and that's actually the reason you're writing, please
-           message 
+           message
            &#32;
            <a href="https://www.reddit.com/wiki/faq#wiki_how_can_i_tell_who_moderates_a_given_subreddit.3F">
             all of the moderators of the subreddit
@@ -157,7 +158,7 @@ ${captcha_field()}
            reason you're writing about.
          </li>
 
-         <li>If you're concerned that something is wrong with your entire account, please send your message to the admin list by 
+         <li>If you're concerned that something is wrong with your entire account, please send your message to the admin list by
            &#32;<a href="/message/compose?to=${g.admin_message_acct|u}">messaging all of the admins of ${g.admin_message_acct}</a>&#32;(It'll be dealt with faster).
          </li>
        </ul>
